--- a/mail.html
+++ b/mail.html
@@ -1,5 +1,132 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-    <body></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <title>Wisdom PHPMailer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .email-form {
+            width: 500px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+        #editor {
+            width: 80%;
+            max-width: 500px;
+            min-height: 300px;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+            outline: none;
+            overflow-y: auto;
+        }
+
+        #editor:focus {
+            border: 2px solid #3498db;
+        }
+    </style>
+</head>
+<body>
+    <div class="email-form">
+        <h2 style="text-align: center;">What jokes are you telling?</h2>
+        <div style="height: 20px;"></div>
+        <form action="send.php" method="post">
+            <div class="form-group">
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="name">Recipient Name:</label>
+                <input type="text" id="name" name="rname" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Recipient Email:</label>
+                <input type="email" id="email" name="remail" required>
+            </div>
+
+            <div class="form-group">
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
+            </div>
+
+            <div id="editor"></div>
+
+            <!-- <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div> -->
+
+            <button type="submit">Send Email</button>
+        </form>
+    </div>
+    <script>
+        // Initialize TinyMCE
+        tinymce.init({
+            selector: '#editor',
+            plugins: 'autoresize',
+            autoresize_bottom_margin: 16,
+            menubar: false,
+            toolbar: 'bold italic underline',
+            skin: 'oxide-dark',
+            content_css: 'dark',
+            statusbar: false,
+            height: 300,
+        });
+    </script>
+</body>
 </html>
